# ClosestPointQuery

./: CMakeLists.txt  README.txt
include/: closestpointquery.h  mesh.h
source/: closestpointquery.cpp  main.cpp  mesh.cpp  tinyply.cpp
test/: CMakeLists.txt  utest.cpp
